matching recent changes to staging in Trunk

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -683,6 +683,11 @@ body.page-iqss-gking-research-group h3 {
   float:right;
   }
 
+#footer p.copy a.footer-login {
+  margin-left: 0;
+  margin-right: 14px;
+  }
+
 #footer-inner #vsite-widgets-search-form {
   width: 302px;
   background-image: none;
