--- a/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
@@ -3,20 +3,23 @@ body.openscholar-admin,#page {
   color:#5a5959;
   }
 
+.page-node #container {
+  max-width: 980px;
+  margin: 0 auto;
+  }
+
+
 #page {
   background: #fff;
   }
 
-/*
-#page .page-content {
-  overflow:hidden;
+.page-node #page {
+  margin: 0;
   }
-*/
 
 .innerframe .view-display-id-default form {
   margin: 0 0 1.5em 0;
   }
-
 
 .innerframe .vsite_content_filter_box form {
   margin: 0;
@@ -127,44 +130,6 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li a:hover {
   border: none;
   }
 
-
-
-/* Typography */
-
-.submitted {
-  color: #657a7a;
-  }
-
-p {
-  margin-bottom: 1em;
-  }
-
-table {
-  border: none;
-  }
-
-table td, table th {
-  padding: 8px;
-  }
-
-table th {
-  border: none;
-  background-color: #fff;
-  padding-bottom: 1px;
-  }
-
-table th {
-  text-shadow: none !important;
-  font-weight: bold;
-  font-size: 1.1em;
-  color: #666;
-  }
-
-/*
-tr.odd {
-  background-color: #f3f3f3;
-  }
-*/
 
 /* SPECIFIC PAGE VIEWS */
 
