--- a/sites/all/themes/openscholar/scholar_base/css/forms.css
+++ b/sites/all/themes/openscholar/scholar_base/css/forms.css
@@ -13,9 +13,10 @@ div.description {
   }
 
 
-div.fieldset, fieldset, .container-inline-date {
+div.fieldset,
+fieldset,
+.container-inline-date {
   background:#F3F3F3;
-  clear: both;
   border: 1px solid #d9d9d9;
   margin: 0 0 1.5em 0;
   }
@@ -102,7 +103,7 @@ select option {
 .search-form label{
   display:none;
   }
-  
+
 .search-form .spelling-suggestions label {
   display: block;
   }
