--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -27,6 +27,11 @@ h2.with-tabs {
   margin: 1em 0;
   }
 
+h2, h3, h4,h5 {
+  margin-bottom: 1em;
+  font-weight: 700;
+  }
+
 h3 {
   font-size: 1.1em;
   }
@@ -100,7 +105,7 @@ a.context-button {
 ul.admin li:hover a,
 ul.vsite-taxonomy-terms li:hover a,
 .addcategory:hover a,
-a.ctools-dropdown-link:hover,
+.node:hover a.ctools-dropdown-link,
 a.context-button:hover {
   color: #228822 !important;
   background-color: transparent !important;
