--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -1,6 +1,31 @@
+@font-face {
+	font-family: 'SlingNormal';
+	src: url('fonts/Sling-webfont.eot');
+	src: local('☺'), url('fonts/Sling-webfont.woff') format('woff'), url('fonts/Sling-webfont.ttf') format('truetype'), url('fonts/Sling-webfont.svg#webfontY1VDFwG7') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'SlingLight';
+	src: url('fonts/SlingLight-webfont.eot');
+	src: local('☺'), url('fonts/SlingLight-webfont.woff') format('woff'), url('fonts/SlingLight-webfont.ttf') format('truetype'), url('fonts/SlingLight-webfont.svg#webfontRMLRpMeQ') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'SlingBold';
+	src: url('fonts/SlingBold-webfont.eot');
+	src: local('☺'), url('fonts/SlingBold-webfont.woff') format('woff'), url('fonts/SlingBold-webfont.ttf') format('truetype'), url('fonts/SlingBold-webfont.svg#webfontsRyI6C7k') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+
 body {
   background:#666;
-  font: 12px/17px arial, helvetica, sans-serif;
+  font: 12px/17px 'helvetica neue', helvetica, arial,sans-serif;
   padding-bottom:30px;
   }
 
@@ -20,7 +45,12 @@ body {
 
 #container {
   width: 980px;
-  margin: 0 auto;
+  margin: 30px auto 0 auto;
+  }
+
+.front #container,
+.section-search #container {
+  margin-top: 0;
   }
 
 #content-wrapper {
@@ -28,9 +58,9 @@ body {
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   border-radius: 6px;
-  -moz-box-shadow: 0 5px 13px rgba(0,0,0,0.35);
-  -webkit-box-shadow: 0 5px 13px rgba(0,0,0,0.35);
-  box-shadow: 0 5px 13px rgba(0,0,0,0.35);
+  -moz-box-shadow: 0 5px 2em rgba(0,0,0,0.35);
+  -webkit-box-shadow: 0 5px 2em rgba(0,0,0,0.35);
+  box-shadow: 0 5px 2em rgba(0,0,0,0.35);
   }
 
 body.no-sidebars #content-wrapper {
@@ -48,6 +78,10 @@ body.no-sidebars #content-wrapper {
   width: 980px;
   }
 
+body.sidebar-right #content-wrapper {
+  padding-left: 30px;
+  }
+
 body.no-sidebars #content-main {
   padding:30px;
   }
@@ -55,6 +89,13 @@ body.no-sidebars #content-main {
 body.front #content-main,
 body.page-site-register #content-main {
   padding:0;
+  }
+
+h2 {
+  color: #b71313;
+  font-size: 18px;
+  font-family: 'SlingBold', georgia, serif;
+  font-weight: normal;
   }
 
 /* HEADER ELEMENTS */
@@ -275,28 +316,24 @@ row {
 #publications,
 #activity,
 #about-abstract {
-  width:346px;
-  padding:19px 0 30px 22px;
+  width:360px;
+  padding:25px 0 30px 8px;
   float: left;
   }
 
 #activity {
-  width: 179px;
+  width: 180px;
   -moz-border-radius: 6px 0 0 0;
   -webkit-border-radius: 6px 0 0 0;
   border-radius: 6px 0 0 0;
-  padding-right: 22px;
+  padding-right: 8px;
+  padding-left: 21px;
   border-right:1px solid #efeded;
   }
 
 #publications {
   padding-bottom: 30px;
   background: #fff;
-  }
-
-#publications h2, #activity h2 {
-  color: #b71313;
-  font-size: 18px;
   }
 
 #publications .views-row {
@@ -318,6 +355,17 @@ row {
   position:relative;
   top:-10px;
   float:right
+  }
+
+#front-panel-1 .views-row {
+  margin-bottom: 8px;
+  padding-bottom: 8px;
+  border-bottom:1px solid #efeded;
+  }
+
+#front-panel-1 #publications .views-row .node {
+  margin-bottom: 0;
+  padding-bottom: 0;
   }
 
 #about-abstract ul.preview-points, #about-abstract ul.preview-points li {
@@ -353,8 +401,7 @@ row {
 
 #about-abstract h2 {
   background:url(images/abs-top.png) no-repeat 0 0;
-  font-size: 19px;
-  font-weight: bold;
+  font-size: 18px;
   line-height: 1.3em;
   color: #555;
   padding:12px 12px 14px 33px;
@@ -395,7 +442,8 @@ row {
 #about-abstract ul.preview-points #learn-more-toggle a {
   display:block;
   color: #000;
-  padding: 15px 12px 24px 31px;
+  padding: 9px 12px 24px 31px;
+  line-height: 20px;
   }
 
 
@@ -405,7 +453,7 @@ row {
   height: 25px;
   text-indent:-999em;
   display:block;
-  margin-top:0;
+  margin-top:2px;
   }
 
 #activity-toggle {
@@ -437,7 +485,7 @@ row {
 #more-info {
   float:left;
   width:268px;
-  font-size:18px;
+  font-size:17px;
   line-height: 1.2em;
   margin-top: .6em;
   }
@@ -509,6 +557,18 @@ p.copy a.poweredby {
 
 p.copy {
   color: #ccc;
+  }
+
+p.copy a.iqss-link, p.copy a.iqss-link:visited {
+  color: #fff;
+  font-weight: bold;
+  text-shadow: 0 1px 2px #222;
+  }
+
+p.copy a:hover {
+  border:none;
+  text-shadow: 0 1px 2px #000;
+  text-decoration: underline;
   }
 
 /* Tables */
@@ -607,7 +667,6 @@ td, td.description {
   }
 
 .views-field-title a {
-  color: #313030;
   font-weight: bold;
   }
 
