--- a/sites/all/themes/openscholar/cp_theme/css/forms.css
+++ b/sites/all/themes/openscholar/cp_theme/css/forms.css
@@ -1,132 +1,228 @@
 /* Forms */
 
+.section-node-add #cp-content,
+.section-node-edit #cp-content {
+  background:#DFE1E3;
+  padding:10px 30px;
+  }
+
 fieldset {
   clear: both;
-  background:#F3F3F3;
-  border: 1px solid #dddddd;
-  border-left: none;
-  border-right:none;
+  background:#fff;
+  border: none;
+  margin-bottom: .5em;
+  padding: 9px 0 12px 0;
+  }
+
+.page-cp-appearance #cp-settings-form fieldset {
+  padding-top: 0;
+  }
+
+td fieldset, fieldset fieldset {
+  padding: 0;
+  background: transparent;
+  }
+
+.form-item {
+  margin-top: 0;
+  }
+
+.fieldset-wrapper {
+  padding: 0 9px;
+  }
+
+.fieldset-wrapper .fieldset-wrapper,
+fieldset fieldset .fieldset-wrapper{
+  padding: 0;
   }
 
 .vertical-tabs fieldset {
   clear:none;
   }
 
-.fieldset.titled {
-  padding-top: 9px;
+div.vertical-tabs {
+  margin-top: 0;
+  margin-right: 7px;
+  margin-left: 191px;
   }
 
-
-.fieldset-title {
-  -moz-border-radius: 0;
-  -webkit-border-radius: 0;
-  border-radius: 0;
-  padding: 4px 19px 5px;
-  margin: 0 -10px;
-  border-right:none;
-  border-left: none;
+div.vertical-tabs ul.vertical-tabs-list {
+  left: -195px;
+  width: 195px;
   }
 
-
-.form-item {
-  border: none;
-  padding: 0 9px;
+div.vertical-tabs ul.vertical-tabs-list li a {
+  color: #3399CC;
+  font-size: 0.9em;
+  font-weight: 300;
   }
 
-.form-item-labeled {
-  clear:both;
+div.vertical-tabs .vertical-tabs-panes fieldset.vertical-tabs-pane {
+  padding-top: 1em;
   }
 
-.block .block-content,
-.container-inline .fieldset-content,
-.fieldset-content {
-  padding: 0;
-  }
-
-container-inline .fieldset-content,
-.fieldset-content {
-  border: none;
-  }
-
-legend, legend a {
-  color: #666;
+div.vertical-tabs-panes .description,
+.vertical-tabs-pane div.form-item label {
   font-weight: bold;
+  color: #666;
   }
 
-
-fieldset legend,
-h3#modal-title {
-	font-weight: bold;
-	font-size: 1.1em;
-	overflow: hidden;
-  white-space: nowrap;
-  color: #adb6bf;
-}
-
-h3#modal-title {
-  margin-bottom: 0;
-  }
-
-label,
-div.form-item label,
-.description, d
-iv.spaces-block-customizer,
-th {
-	color:#333;
-	font-size: .9em;
-	margin-bottom: 3px;
-	}
-
-label,
-div.form-item label,
-.description,
-div.spaces-block-customizer {
-	text-transform:none;
-	}
-
-label.option,
-div.form-item label.option {
+div.vertical-tabs-panes .form-item .description {
+  color: #888;
   font-weight: normal;
   }
 
-div.description {
-	color:#777;
-	font-weight: normal;
-	line-height: 127%;
-	}
 
-fieldset {
-  border: none;
+fieldset legend {
+  overflow: hidden;
+  white-space: nowrap;
+  background:#F3F3F3;
+  width:100%;
+  border-top: 1px solid #D9D9D9;
+  border-bottom: none;
   }
 
-fieldset fieldset, #views-bulk-operations-select fieldset {
-  border: none;
+
+legend, legend a {
+  color: #333;
+  font-weight: bold;
   }
 
-label.option {
-	color: #666;
+legend a {
+  display:block;
+  }
+
+legend,
+.collapsible .fieldset-title a.item-list h3,
+.block .block-title,
+.admin-panel h3,
+.fieldset-title,
+.collapsible .fieldset-title a  {
+  font-size: 11px;
+  }
+
+
+html.js fieldset.collapsible legend a {
+  background: url(../images/open-close.png) no-repeat 0 -20px transparent;
+  padding-left: 26px;
+  color: #000;
+  }
+
+html.js fieldset.collapsed legend a {
+  background-position: 0 0;
+  color:#999;
+  }
+
+.collapsible {
+  background-color: #F3F3F3;;
+  }
+
+
+.collapsed {
+  background-color: #fff;
+  }
+
+.form-region-main .resizable-textarea {
+  width:100%;
+  }
+
+/*
+.node-form .form-region-right {
+  margin-top: 14px;
+  }
+*/
+
+/*
+.section-cp .fieldset-wrapper .fieldset-wrapper,
+.section-cp .og-vocab-taxonomy .fieldset-wrapper,  {
+	margin: 0;
 	}
 
-input.form-text {
-	border-width: 2px;
-	}
+.section-cp .og-vocab-taxonomy {
+  margin: 10px -3px;
+  padding: 10px 3px 10px 10px;
+  border: 1px solid #dfe5e6;
+  background: #f2f5f5;
+  }
+
+.section-cp .og-vocab-taxonomy legend {
+  font-size: 1em;
+  }
+
+.section-cp div.form-item {
+	margin: 0 1em 0 0;
+	border: none;
+  }
+
+.section-cp #dialog-main div.form-item {
+  margin:0;
+  }
+*/
+.views-exposed-form .views-exposed-widget {
+  padding: 0 2em 0 0;
+  }
+
+#views-bulk-operations-submit {
+  padding: 0;
+  }
+
+select,
+select option {
+  max-width:99%;
+  }
+
+select option {
+  padding: 2px 5px;
+  }
+
+.form-region-right .og-vocab-taxonomy select {
+  max-width: 100%;
+  }
+
+.form-radios {
+  margin: 1em 0;
+  }
+
+/*
+.section-cp .form-radios input {
+  margin: 3px 3px 3px 0;
+  }
+*/
+.node-form .form-text {
+  font-size: .85em;
+  width: 99.9%;
+  }
+
 
 input.form-autocomplete,
 input.form-text,
-textarea.form-textarea,
-select.form-select {
-  background: url(../images/form_bg.png) repeat-x 0 0 white;
-  border-color: #707070 #ABABAB #CECECE;
-  border-style: solid;
+textarea.form-textarea {
+  /*bbackground: url(images/input-bg.png) repeat-x 0 0 #fff; */
+  background-color:#fff;
+  -moz-border-style: solid;
   -moz-border-bottom-colors: #F9F9F9 #CECECE;
   -moz-border-left-colors: #F9F9F9 #ABABAB;
   -moz-border-right-colors: #F9F9F9 #ABABAB;
   -moz-border-top-colors: #F9F9F9 #707070;
-  border-width: 2px;
+  -moz-border-width: 2px;
   margin-top: -2px;
   padding: 4px 3px 2px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
   }
 
+.resizable-textarea {
+  width: 100%;
+  }
+
+select.form-select {
+  }
+
+textarea.form-textarea {
+  background: #fff;
+  }
 
 input.form-autocomplete:hover,
 input.form-text:hover,
@@ -136,37 +232,133 @@ input.form-autocomplete:focus,
 input.form-text:focus,
 textarea.form-textarea:focus,
 select.form-select:focus {
-  border-color:#aaccee;
   -moz-border-bottom-colors: #aaccee;
   -moz-border-left-colors: #aaccee;
   -moz-border-right-colors: #aaccee;
   -moz-border-top-colors: #aaccee;
+  /*background-position: 0 -26px;*/
+  -moz-background-color: #FFFEEB;
   }
 
-div.form-radios .form-item {
-  float: left;
+html.js input.form-autocomplete {
+  background-position: 100% 3px;
   }
 
-div.spaces-block-customizer {
+/*Creation forms that use horizontal radio buttons */
+
+.page-node-add-class .form-radios .form-item {
+  display:inline;
+  margin-right: 10px;
+  }
+
+.fieldset-wrapper input.form-submit,
+.content-add-more input.form-submit {
+  float:right;
+  margin-right: 12px;
+  }
+
+#edit-field-biblio-image-0-filefield-upload {
+  float: none;
+  }
+
+/* End horizontal radios */
+
+
+/*
+.section-cp fieldset table tr {
   border: none;
-  margin:0;
-  padding: 0;
   }
 
-#edit-field-presentation-date-0-value-datepicker-popup-0-wrapper,
-#edit-field-presentation-date-0-value-wrapper{
-  padding:0;
+.section-cp label, .section-cp div.form-item label, .section-cp .description, div.spaces-block-customizer, th {
+	font-weight: bold;
+	color:#333;
+	font-size: .9em;
+	margin-bottom: 3px;
+	}
+
+
+.section-cp label, .section-cp div.form-item label, .section-cp .description, div.spaces-block-customizer {
+	display:block;
+	text-transform:none;
+	}
+
+.section-cp label.option, .section-cp div.form-item label.option {
+  font-weight: normal;
+  }
+
+
+.section-cp div.description {
+	color:#777;
+	font-weight: normal;
+	line-height: 127%;
+	}
+
+.section-cp .fieldset-wrapper div.description, .section-cp table div.description, .section-cp .form-item div.description {
+  margin-left: 0;
+  padding: 0;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  }
+
+*/
+
+table.features div.feature div.description {
+  font-size:11px;
+  line-height:18px;
+  margin:0;
+  }
+
+#modal-content table {
+  width:auto;
+  }
+
+
+
+h3#modal-title {
+  float: none;
+  margin-bottom: 1.5em;
+  }
+
+.ctools-use-modal-processed .buttons	{
+  margin-top: 30px;
+  }
+
+a.close-this {
+  display:block;
+  float:right;
+  }
+
+fieldset.group-account-basics {
+  padding: 0;
   }
 
 /* DRAGGABLE AREAS */
 
+#menu_sort_table {
+  margin-bottom: 1em;
+  }
 
-.draggable td {
+#node-form .draggable td {
+  vertical-align: middle;
   font-weight: bold;
   }
 
+#node-form .draggable td {
+    padding: 0 4px;
+    }
+
 .draggable a.tabledrag-handle {
+  cursor:move;
+  float:left;
+  height:1.7em;
+  margin:-0.4em 0 -0.4em -0.5em;
+  padding:0.42em 1.5em 0.42em 0.5em;
   text-decoration:none;
+  }
+
+.draggable fieldset {
+  clear: none;
+  margin: 0;
   }
 
 .draggable input.form-text {
@@ -177,7 +369,43 @@ div.spaces-block-customizer {
 
 .draggable select {
   font-size: 10px;
-   }
+  height: auto;
+  padding-top: 1px;
+  }
+
+.tabledrag-changed {
+  float: right;
+  margin:-19px -6px 0 0;
+  padding:0;
+  }
+
+.node-form .content-multiple-table td.content-multiple-drag {
+  width: 18px;
+  }
+
+/* Various Views */
+
+/*
+#views-bulk-operations-select {
+  left:555px;
+  position:absolute;
+  top:12px;
+  }*/
+
+
+/* These really should have a standard class "top-marg" or something */
+
+#user-profile-form .description,
+#edit-pass-pass1,
+#edit-vsite-users-first-name-0-value,
+#edit-vsite-users-last-name-0-value {
+  margin-bottom: 14px;
+  }
+
+#edit-name-wrapper {
+  clear: both;
+  }
+
 
 /* Biblio Settings View */
 
@@ -187,43 +415,100 @@ div.spaces-block-customizer {
   margin-right: 46px;
   }
 
-div.ctools-modal-content .modal_col div.form-item {
-  margin: 1em 0 1.5em 0;
-  }
+/* USER CREATION */
 
-div.ctools-modal-content .modal_col div.form-item .form-item {
-  margin: 0;
+form div.buttons {
+  text-align: left;
+  margin-left: 200px;
   }
-
-div.ctools-modal-content .modal_col .form-item label {
-  width: auto;
-  }
-
-.modal_col input.form-text {
-  width: 100%;
-  }
-
 
 /* CONTENT PAGES FILTERING AND UPDATING OPTIONS */
 
-
-.vsite_content_filter_box .fieldset-wrapper,
-#views-bulk-operations-select .fieldset-wrapper {
+.vsite_content_filter_box .fieldset-wrapper, #views-bulk-operations-select .fieldset-wrapper {
+  margin-left: 0;
+  margin-top: 0;
   font-size:0.8em;
+  padding:1.5em 1.5em 1em;
   background: #EAEBE9;
   }
 
-.view-vsite-content .vsite_content_filter_box legend,
-#views-bulk-operations-select legend {
+.view-vsite-content .vsite_content_filter_box legend, #views-bulk-operations-select legend {
+  padding-top: 4px;
   font-size: 1em;
   }
 
-.view-vsite-content .vsite_content_filter_box legend.collapse-processed,
-#views-bulk-operations-select legend.collapse-processed {
+.view-vsite-content .vsite_content_filter_box legend.collapse-processed, #views-bulk-operations-select legend.collapse-processed {
   background: #EAEBE9;
+  padding-right:5px;
   }
 
-.view-vsite-content fieldset.collapsed legend.collapse-processed,
-#views-bulk-operations-select fieldset.collapsed legend.collapse-processed {
+.view-vsite-content fieldset.collapsed legend.collapse-processed, #views-bulk-operations-select fieldset.collapsed legend.collapse-processed {
   background: transparent;
+  }
+
+/* CREATION FORM SPECIFIC FIELDS */
+
+#edit-biblio-type {
+  width: 100%;
+  }
+
+#edit-biblio-type-wrapper,
+#edit-biblio-year-wrapper,
+#edit-biblio-publisher-wrapper,
+#edit-biblio-place-published-wrapper,
+#edit-biblio-pages-wrapper,
+#edit-biblio-secondary-title-wrapper,
+#edit-biblio-volume-wrapper,
+#edit-biblio-issue-wrapper,
+#edit-biblio-section-wrapper,
+#edit-biblio-date-wrapper,
+#edit-biblio-type-of-work-wrapper,
+#edit-biblio-date-wrapper,
+#edit-biblio-edition-wrapper,
+#edit-biblio-tertiary-title-wrapper,
+#edit-biblio-number-of-volumes-wrapper,
+#edit-biblio-number-wrapper,
+#edit-biblio-issn-wrapper,
+#edit-biblio-doi-wrapper,
+.page-node-add-presentation .container-inline-date,
+#edit-field-presentation-location-0-value-wrapper,
+.page-node-add-event .date-clear-block,
+#edit-field-scholar-software-method-value-wrapper,
+#edit-field-scholar-software-name-0-value-wrapper,
+#edit-vsite-users-first-name-0-value-wrapper,
+#edit-vsite-users-last-name-0-value-wrapper
+{
+  display:inline-block;
+  vertical-align: top;
+  width: 48.5%;
+  }
+
+
+#field-biblio-extra-items .description {
+  float: left;
+  }
+
+#field-biblio-extra-items,
+#edit-field-biblio-image-0-upload-wrapper .description {
+  padding-bottom: 1em;
+  clear:both;
+  }
+
+#edit-field-biblio-image-0-upload-wrapper .description {
+  padding-bottom: 0;
+  }
+
+#edit-field-biblio-image-0-upload-wrapper,
+#edit-field-biblio-image-0-upload-wrapper .filefield-element {
+  margin:0;
+  }
+
+#biblio-authors td.biblio-contributor {
+  width: 78%;
+}
+
+/* EVENT CREATION */
+
+.page-node-add-event .date-clear-block {
+  background: #fff;
   }
