--- a/sites/all/themes/openscholar/scholar_base/css/ie-7.css
+++ b/sites/all/themes/openscholar/scholar_base/css/ie-7.css
@@ -16,11 +16,11 @@ body.header-left-right #header-right {
   }
 
 
-body.two-sidebars #sidebar-left {
+body.two-sidebars #sidebar-first {
 	left: 220px; /* Total width, including padding of right col */
 	}
 
-body.sidebar-left #sidebar-left {
+body.sidebar-first #sidebar-first {
 	left: 0;
 	}
 
@@ -32,15 +32,16 @@ body.header-left-main #header-left {
 	left: 200px;
 	}
 
-#sidebar-left,
-#header-left {
+#sidebar-first,
+#header-left,
+.search-form input.form-submit {
   margin-left: expression(
-   document.all.center.offsetWidth * -1 +
-   parseFloat(document.all.center.currentStyle.paddingLeft) +
-   parseFloat(document.all.left.currentStyle.paddingLeft) +
-   parseFloat(document.all.left.currentStyle.paddingRight)
+   document.all.content-main.offsetWidth * -1 +
+   parseFloat(document.all.content-main.currentStyle.paddingLeft) +
+   parseFloat(document.all.sidebar-first.currentStyle.paddingLeft) +
+   parseFloat(document.all.sidebar-first.currentStyle.paddingRight)
    ); /* Fix for IE7 */
-  }
+}
 
 ul.menu li.leaf {
   list-style-image: none;
