--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -242,23 +242,50 @@ div.terms {
   margin-left: 1em;
   }
 
-.os-links {
-  height: 1.5em;
-  width:5em;
-  float: right;
-  width: 51px;
-  text-align: right;
-  display: none;
-  margin-right: 5px;
-  padding-left: 5px;
+.node-teaser {
+  position: relative;
   }
 
+.os-links {
+  height: 18px;
+  float:right;
+  width: 51px;
+  text-align: right;
+  padding: 0 0 5px 5px;
+  z-index:1;
+  }
+
+/*
 .node:hover .os-links {
   display:block;
   }
+*/
 
-.node.os-links-trail {
-  outline: 1px dashed #999;
+.outline-node {
+  position:absolute;
+  background: transparent;
+  top: -5px;
+  bottom: -5px;
+  left: -5px;
+  right: -5px;
+  display:none;
+  border: 1px solid #bdcfd8;
+  z-index:0;
+  }
+
+.node-inner {
+  padding: 3px;
+  }
+
+.os-links-trail {
+  border:1px solid #bdcfd8;
+  -moz-border-radius: 1px;
+  -webkit-border-radius: 1px;
+  border-radius: 1px;
+  }
+
+.os-links-trail .node-inner {
+  padding: 2px;
   }
 
 /* VIEWS */
