latest form changes to trunk

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -679,8 +679,11 @@ body.page-iqss-gking-research-group h3 {
 
 #footer p.copy {
   margin-right: 0;
-  max-width: 400px;
+  width: 350px;
   float:right;
+  margin-top:2px;
+  color: #fff;
+  font-size:10px;
   }
 
 #footer p.copy a.footer-login {
@@ -752,12 +755,6 @@ body.page-iqss-gking-research-group h3 {
   margin-top: 8px;
   }
 
-#footer p.copy {
-  margin-top:2px;
-  color: #fff;
-  font-size:10px;
-  }
-
 
 /* Search form*/
 
@@ -784,6 +781,10 @@ body.page-iqss-gking-research-group h3 {
 
 #footer #search-form #edit-keys {
   border: 1px solid #c3c3c3;
+  -moz-border-bottom-colors: #c3c3c3;
+  -moz-border-left-colors: #c3c3c3;
+  -moz-border-right-colors: #c3c3c3;
+  -moz-border-top-colors: #c3c3c3;
   padding: 3px 4px 1px 0;
   background: #fff;
   }
