--- a/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
@@ -131,6 +131,33 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li a:hover {
   }
 
 
+table {
+  border: none;
+  font-size: .9em;
+  background: transparent;
+  }
+
+table td, table th {
+  padding: 3px 4px;
+  border: none;
+  background: transparent;
+  }
+
+table th {
+  padding-bottom: 1px;
+  border-bottom: 1px solid #ddd;
+  font-weight: bold;
+  color: #666;
+  text-shadow: none;
+  }
+
+table tr,
+table tr.odd,
+table tr.even {
+  padding: 0;
+  }
+
+
 /* SPECIFIC PAGE VIEWS */
 
 
