--- a/sites/all/themes/openscholar/cp_theme/css/typography.css
+++ b/sites/all/themes/openscholar/cp_theme/css/typography.css
@@ -457,7 +457,11 @@ input.form-button, button,
   cursor: pointer;
   text-align: center;
   white-space: nowrap;
-  font-size: 12px;
+  font-size: 11px;
+  }
+
+.fieldset-content .form-submit {
+  float:right;
   }
 
 input.form-submit:hover,
@@ -472,6 +476,19 @@ button:active {
 input.form-submit:active,
 button:active {
   background:#fffcca;
+  }
+
+
+#edit-submit,
+#edit-preview,
+#edit-preview-changes,
+#edit-delete,
+#edit-reset {
+  -moz-border-radius:14px;
+  -webkit-border-radius:14px;
+  border-radius:14px;
+  font-size: 13px;
+  padding: 0 12px !important;
   }
 
 .advanced-help-link {
