--- a/sites/all/themes/openscholar/scholar_base/css/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/css/dropdown.css
@@ -138,15 +138,16 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
   }
 
 .node .vsite-admin a.ctools-dropdown-link {
-  background: url(../images/admin-link.png) 0 3px no-repeat transparent;
+  background: url(../images/admin-link.png) 0 4px no-repeat transparent;
   padding: 1px 0 1px 20px !important;
   font-size: 11px;
   font-family: 'helvetica neue', helvetica, arial, sans-serif;
   position: absolute;
+  height: 16px;
   }
 
 .node:hover .vsite-admin a.ctools-dropdown-link {
-  background-position: 0 -16px;
+  background-position: 0 -15px;
   }
 
 .empty-content .item-list ul.context-links li {
