latest input form changes

--- a/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
@@ -3,11 +3,10 @@ body.openscholar-admin,#page {
   color:#5a5959;
   }
 
-.page-node #container {
+#container {
   max-width: 980px;
   margin: 0 auto;
   }
-
 
 #page {
   background: #fff;
@@ -157,6 +156,9 @@ table tr.even {
   padding: 0;
   }
 
+table tr.draggable {
+  border-bottom: 1px solid #D9D9D9;
+  }
 
 /* SPECIFIC PAGE VIEWS */
 
