--- a/sites/all/themes/openscholar/cp_theme/css/spaces.css
+++ b/sites/all/themes/openscholar/cp_theme/css/spaces.css
@@ -20,6 +20,11 @@ table.spaces-features td.name {
   padding-left: 35px;
   }
 
+table.spaces-features tr.enabled {
+  background:#e9edef;
+  border-bottom: 1px solid #fff;
+  }
+
 table.spaces-features tr.enabled td.name {
   background: url(../images/check-mark.png) no-repeat 4px 50%;
   }
