--- a/sites/all/themes/openscholar/cp_theme/css/modal.css
+++ b/sites/all/themes/openscholar/cp_theme/css/modal.css
@@ -8,7 +8,7 @@
 
 div.ctools-modal-content {
   color: #000;
-  padding: 20px 0 0 25px;
+  padding: 20px 0 20px 25px;
   margin: 0;
   border: none;
   text-align: left;
@@ -16,6 +16,10 @@ div.ctools-modal-content {
   -moz-box-shadow: 0 .5em 3em rgba(0,0,0,0.6);
   -webkit-box-shadow: 0 .5em 3em rgba(0,0,0,0.6);
   box-shadow: 0 .5em 3em rgba(0,0,0,0.6);
+  }
+
+div.ctools-modal-content .modal-title {
+  color: #7a8c95;
   }
 
 #modal-content {
