improvements to forms/cp

--- a/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
@@ -156,8 +156,16 @@ table tr.even {
   padding: 0;
   }
 
+table#upload-attachments td {
+  padding: 4px !important;
+  }
+
 table tr.draggable {
   border-bottom: 1px solid #D9D9D9;
+  }
+
+td.content-multiple-drag {
+  width: 20px;
   }
 
 /* SPECIFIC PAGE VIEWS */
