larger label on software release

--- a/sites/all/modules/openscholar_features/scholar_software/scholar_software.css
+++ b/sites/all/modules/openscholar_features/scholar_software/scholar_software.css
@@ -15,3 +15,8 @@ ul#scholar_software-release-info li {
   margin: 0;
   padding: 0;
 }
+
+.node-type-scholar-software-release div.form-item label {
+  display:inline;
+  font-size: 1.1em;
+  }
