fix spelling label

--- a/sites/all/themes/openscholar/scholar_base/css/forms.css
+++ b/sites/all/themes/openscholar/scholar_base/css/forms.css
@@ -104,9 +104,12 @@ select option {
   display:none;
   }
 
+.search-form .spelling-suggestions{
+  padding-top: 1em
+}
 .search-form .spelling-suggestions label {
-  display: block;
-  }
+  display: inline;
+}
 
 .search-form .container-inline {
   background: url(../images/searchglass.gif) no-repeat 100% 0;
