changes to ctools dropdown

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -147,7 +147,11 @@ a:hover {
   }
 
 .toggle {
-  background-position: 100% 2px;
+  background-position: 100% 3px;
+  }
+
+.toggle.expanded {
+  background-position: 98% 15px;
   }
 
 a.more {
