--- a/sites/all/themes/openscholar/scholar_base/css/tables.css
+++ b/sites/all/themes/openscholar/scholar_base/css/tables.css
@@ -60,6 +60,12 @@ tr.selected td, tr.selected td a {
   clear: both;
   }
 
+table.itu-attachment-list td.file,
+table.itu-attachment-list td.size {
+  padding-right: 5px;
+  vertical-align: middle;
+  }
+
 /* MODULES LIST */
 
 table.package .version {
