--- a/sites/all/themes/openscholar/scholar_base/css/tabs.css
+++ b/sites/all/themes/openscholar/scholar_base/css/tabs.css
@@ -7,14 +7,16 @@
 }
 
 /* Primary */
-.tabs ul.primary {
+.tabs ul.primary,
+#content .tabs ul.primary {
   margin: 0 0 20px 0;
   padding: 0;
   width: 100%;
   height: 1.4em;
   }
 
-.tabs ul.primary li {
+.tabs ul.primary li,
+#content .tabs ul.primary li {
   border-style: none;
   float: left;
   list-style: none;
