--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -200,8 +200,20 @@ ol {
   padding:0 0 0 3px;
   }
 
-#navbar li, #header-top li, .views-admin-links li, ul.inline li {
+#navbar li,
+#header-top li,
+.views-admin-links li,
+ul.inline li {
   display:inline;
+  }
+
+.node div.links .links li {
+  float: left;
+  }
+
+.node .node-inner .links li a {
+  padding: 1px;
+  min-height: 16px;
   }
 
 .block ul {
