--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -249,28 +249,17 @@ div.terms {
 .os-links {
   height: 18px;
   float:right;
-  width: 51px;
-  text-align: right;
+  width: 14px;
   padding: 0 0 5px 5px;
   z-index:1;
   }
 
-/*
-.node:hover .os-links {
-  display:block;
-  }
-*/
-
-.outline-node {
-  position:absolute;
-  background: transparent;
-  top: -5px;
-  bottom: -5px;
-  left: -5px;
-  right: -5px;
+.os-links ul.links {
   display:none;
-  border: 1px solid #bdcfd8;
-  z-index:0;
+  }
+
+.node:hover .os-links ul.links {
+  display:block;
   }
 
 .node-inner {
@@ -278,10 +267,10 @@ div.terms {
   }
 
 .os-links-trail {
-  border:1px solid #bdcfd8;
-  -moz-border-radius: 1px;
-  -webkit-border-radius: 1px;
-  border-radius: 1px;
+  border:1px solid #356df6;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
   }
 
 .os-links-trail .node-inner {
