--- a/sites/all/themes/openscholar/cp_theme/css/typography.css
+++ b/sites/all/themes/openscholar/cp_theme/css/typography.css
@@ -195,11 +195,17 @@ body#tinymce {
 	margin: 10px;
 	}
 
-body#tinymce h2, body#tinymce h3, body#tinymce h4, body#tinymce p, body#tinymce ul, body#tinymce ol {
+body#tinymce h2,
+body#tinymce h3,
+body#tinymce h4,
+body#tinymce p,
+body#tinymce ul,
+body#tinymce ol {
   margin-bottom: 1.5em;
   }
 
-body#tinymce ul, body#tinymce ol {
+body#tinymce ul,
+body#tinymce ol {
   padding-left: 1.5em;
   }
 
