--- a/sites/all/themes/openscholar/scholar_aglet/scholar-aglet.css
+++ b/sites/all/themes/openscholar/scholar_aglet/scholar-aglet.css
@@ -179,7 +179,7 @@ body.no-sidebars #content-wrapper {
   overflow: hidden;
 }
 
-#content-wrapper .column {
+#content-wrapper .sidebar {
   padding-bottom: 20010px;
   margin-bottom: -20000px;
 }
