--- a/sites/all/themes/openscholar/scholar_base/css/biblio.css
+++ b/sites/all/themes/openscholar/scholar_base/css/biblio.css
@@ -102,9 +102,9 @@ dl.bibliomultiselect .form-item {
 }
 
 .biblio-title a {
-  font-weight: bold;
-  text-decoration: none;
-  font-style: normal;
+  font-weight: bold !important;
+  text-decoration: none !important;
+  font-style: normal !important;
   line-height: normal;
   text-align: left;
   }
