--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -20,6 +20,11 @@ h2.with-tabs {
   margin-bottom: .3em;
   }
 
+h2.title span.version-info {
+  display:block;
+  font-style: italic;
+  }
+
 .section-admin h2.title {
   background: url(../images/admin-logo.png) no-repeat 0 50% transparent;
   padding-left: 125px;
@@ -91,7 +96,6 @@ p.copy a.footer-login {
 p.copy a.footer-login:hover {
   background: #fff !important;
   }
-
 
 .marker,
 ul.admin li a,
